# reel

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  reel_project_assistant.nu  reel_shell.nu
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: CACHE_CONTROL_SPEC.md  CLI_TOOL.md  CLI_TOOL_INTEGRATION_TESTS.md  DESIGN.md  ENHANCEMENT_FINE_GRAINED_PATH_GRANTS.md  ISSUES.md  STATUS.md
prompts/: project_assistant.md
reel/: Cargo.toml  build.rs
reel-cli/: Cargo.toml
reel-cli/src/: main.rs
reel/src/: agent.rs  lib.rs  nu_session.rs  sandbox.rs  tools.rs
