[workspace]
members = ["reel", "reel-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "deny"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
future_not_send = "allow"
similar_names = "allow"
unused_self = "allow"
cast_possible_truncation = "allow"
doc_markdown = "allow"
significant_drop_tightening = "allow"
needless_lifetimes = "allow"
new_without_default = "allow"
option_if_let_else = "allow"
single_match_else = "allow"
used_underscore_binding = "allow"
uninlined_format_args = "allow"
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
dbg_macro = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true
