[package]
name = "reel"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
testing = ["flick/testing"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "fs", "signal", "io-util"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flick = { git = "https://github.com/bitmonk8/flick", rev = "84424ce" }
bitflags = "2"
lot = { git = "https://github.com/bitmonk8/lot", rev = "1a6fc30", features = ["tokio"] }
tempfile = "3"

[build-dependencies]
ureq = "3"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = "2"

[dev-dependencies]
flick = { git = "https://github.com/bitmonk8/flick", rev = "84424ce", features = ["testing"] }
